--- a/config/meters.conf
+++ b/config/meters.conf
@@ -6,12 +6,9 @@ Alias /meters /home/paul/code/meters/html
 	Require all granted
 </Directory>
 
-ScriptAlias /meters-api /home/paul/code/meters/cgi-bin
+WSGIScriptAlias /meters_api /home/paul/code/meters/api/meters_api.wsgi
 
-<Directory /home/paul/code/meters/cgi-bin >
-	AllowOverride All
-	Options +ExecCGI -MultiViews +FollowSymLinks
-	SetHandler cgi-script
-	AddHandler cgi-script .py
+<Directory /home/paul/code/meters/api/>
+	WSGIApplicationGroup meters_api
 	Require all granted
-</Directory> 
+</Directory>
